--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "homepage": "http://chalangt.github.io/",
   "dependencies": {
     "react": "^16.2.0",
+    "react-alert": "^4.0.2",
+    "react-alert-template-basic": "^1.0.0",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.2.0",
     "react-scripts": "1.1.1"
